rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__a.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 0,
        "end": 179,
        "id": {
          "commentStart": 0,
          "end": 9,
          "moduleId": 0,
          "name": "boxSketch",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "body": [
            {
              "arguments": [],
              "callee": {
                "abs_path": false,
                "commentStart": 12,
                "end": 25,
                "moduleId": 0,
                "name": {
                  "commentStart": 12,
                  "end": 25,
                  "moduleId": 0,
                  "name": "startSketchOn",
                  "start": 12,
                  "type": "Identifier"
                },
                "path": [],
                "start": 12,
                "type": "Name"
              },
              "commentStart": 12,
              "end": 29,
              "moduleId": 0,
              "start": 12,
              "type": "CallExpressionKw",
              "type": "CallExpressionKw",
              "unlabeled": {
                "abs_path": false,
                "commentStart": 26,
                "end": 28,
                "moduleId": 0,
                "name": {
                  "commentStart": 26,
                  "end": 28,
                  "moduleId": 0,
                  "name": "XY",
                  "start": 26,
                  "type": "Identifier"
                },
                "path": [],
                "start": 26,
                "type": "Name",
                "type": "Name"
              }
            },
            {
              "arguments": [
                {
                  "type": "LabeledArg",
                  "label": {
                    "commentStart": 52,
                    "end": 54,
                    "moduleId": 0,
                    "name": "at",
                    "start": 52,
                    "type": "Identifier"
                  },
                  "arg": {
                    "commentStart": 57,
                    "elements": [
                      {
                        "commentStart": 58,
                        "end": 59,
                        "moduleId": 0,
                        "raw": "0",
                        "start": 58,
                        "type": "Literal",
                        "type": "Literal",
                        "value": {
                          "value": 0.0,
                          "suffix": "None"
                        }
                      },
                      {
                        "commentStart": 61,
                        "end": 62,
                        "moduleId": 0,
                        "raw": "0",
                        "start": 61,
                        "type": "Literal",
                        "type": "Literal",
                        "value": {
                          "value": 0.0,
                          "suffix": "None"
                        }
                      }
                    ],
                    "end": 63,
                    "moduleId": 0,
                    "start": 57,
                    "type": "ArrayExpression",
                    "type": "ArrayExpression"
                  }
                }
              ],
              "callee": {
                "abs_path": false,
                "commentStart": 37,
                "end": 51,
                "moduleId": 0,
                "name": {
                  "commentStart": 37,
                  "end": 51,
                  "moduleId": 0,
                  "name": "startProfileAt",
                  "start": 37,
                  "type": "Identifier"
                },
                "path": [],
                "start": 37,
                "type": "Name"
              },
              "commentStart": 37,
              "end": 64,
              "moduleId": 0,
              "start": 37,
              "type": "CallExpressionKw",
              "type": "CallExpressionKw",
              "unlabeled": null
            },
            {
              "arguments": [
                {
                  "type": "LabeledArg",
                  "label": {
                    "commentStart": 77,
                    "end": 79,
                    "moduleId": 0,
                    "name": "at",
                    "start": 77,
                    "type": "Identifier"
                  },
                  "arg": {
                    "commentStart": 82,
                    "elements": [
                      {
                        "commentStart": 83,
                        "end": 84,
                        "moduleId": 0,
                        "raw": "0",
                        "start": 83,
                        "type": "Literal",
                        "type": "Literal",
                        "value": {
                          "value": 0.0,
                          "suffix": "None"
                        }
                      },
                      {
                        "commentStart": 86,
                        "end": 88,
                        "moduleId": 0,
                        "raw": "10",
                        "start": 86,
                        "type": "Literal",
                        "type": "Literal",
                        "value": {
                          "value": 10.0,
                          "suffix": "None"
                        }
                      }
                    ],
                    "end": 89,
                    "moduleId": 0,
                    "start": 82,
                    "type": "ArrayExpression",
                    "type": "ArrayExpression"
                  }
                }
              ],
              "callee": {
                "abs_path": false,
                "commentStart": 72,
                "end": 76,
                "moduleId": 0,
                "name": {
                  "commentStart": 72,
                  "end": 76,
                  "moduleId": 0,
                  "name": "line",
                  "start": 72,
                  "type": "Identifier"
                },
                "path": [],
                "start": 72,
                "type": "Name"
              },
              "commentStart": 72,
              "end": 90,
              "moduleId": 0,
              "start": 72,
              "type": "CallExpressionKw",
              "type": "CallExpressionKw",
              "unlabeled": null
            },
            {
              "arguments": [
                {
                  "type": "LabeledArg",
                  "label": {
                    "commentStart": 112,
                    "end": 115,
                    "moduleId": 0,
                    "name": "end",
                    "start": 112,
                    "type": "Identifier"
                  },
                  "arg": {
                    "commentStart": 118,
                    "elements": [
                      {
                        "argument": {
                          "commentStart": 120,
                          "end": 121,
                          "moduleId": 0,
                          "raw": "5",
                          "start": 120,
                          "type": "Literal",
                          "type": "Literal",
                          "value": {
                            "value": 5.0,
                            "suffix": "None"
                          }
                        },
                        "commentStart": 119,
                        "end": 121,
                        "moduleId": 0,
                        "operator": "-",
                        "start": 119,
                        "type": "UnaryExpression",
                        "type": "UnaryExpression"
                      },
                      {
                        "commentStart": 123,
                        "end": 124,
                        "moduleId": 0,
                        "raw": "5",
                        "start": 123,
                        "type": "Literal",
                        "type": "Literal",
                        "value": {
                          "value": 5.0,
                          "suffix": "None"
                        }
                      }
                    ],
                    "end": 125,
                    "moduleId": 0,
                    "start": 118,
                    "type": "ArrayExpression",
                    "type": "ArrayExpression"
                  }
                }
              ],
              "callee": {
                "abs_path": false,
                "commentStart": 98,
                "end": 111,
                "moduleId": 0,
                "name": {
                  "commentStart": 98,
                  "end": 111,
                  "moduleId": 0,
                  "name": "tangentialArc",
                  "start": 98,
                  "type": "Identifier"
                },
                "path": [],
                "start": 98,
                "type": "Name"
              },
              "commentStart": 98,
              "end": 126,
              "moduleId": 0,
              "start": 98,
              "type": "CallExpressionKw",
              "type": "CallExpressionKw",
              "unlabeled": null
            },
            {
              "arguments": [
                {
                  "type": "LabeledArg",
                  "label": {
                    "commentStart": 139,
                    "end": 141,
                    "moduleId": 0,
                    "name": "at",
                    "start": 139,
                    "type": "Identifier"
                  },
                  "arg": {
                    "commentStart": 144,
                    "elements": [
                      {
                        "commentStart": 145,
                        "end": 146,
                        "moduleId": 0,
                        "raw": "5",
                        "start": 145,
                        "type": "Literal",
                        "type": "Literal",
                        "value": {
                          "value": 5.0,
                          "suffix": "None"
                        }
                      },
                      {
                        "argument": {
                          "commentStart": 149,
                          "end": 151,
                          "moduleId": 0,
                          "raw": "15",
                          "start": 149,
                          "type": "Literal",
                          "type": "Literal",
                          "value": {
                            "value": 15.0,
                            "suffix": "None"
                          }
                        },
                        "commentStart": 148,
                        "end": 151,
                        "moduleId": 0,
                        "operator": "-",
                        "start": 148,
                        "type": "UnaryExpression",
                        "type": "UnaryExpression"
                      }
                    ],
                    "end": 152,
                    "moduleId": 0,
                    "start": 144,
                    "type": "ArrayExpression",
                    "type": "ArrayExpression"
                  }
                }
              ],
              "callee": {
                "abs_path": false,
                "commentStart": 134,
                "end": 138,
                "moduleId": 0,
                "name": {
                  "commentStart": 134,
                  "end": 138,
                  "moduleId": 0,
                  "name": "line",
                  "start": 134,
                  "type": "Identifier"
                },
                "path": [],
                "start": 134,
                "type": "Name"
              },
              "commentStart": 134,
              "end": 153,
              "moduleId": 0,
              "start": 134,
              "type": "CallExpressionKw",
              "type": "CallExpressionKw",
              "unlabeled": null
            },
            {
              "arguments": [
                {
                  "type": "LabeledArg",
                  "label": {
                    "commentStart": 169,
                    "end": 175,
                    "moduleId": 0,
                    "name": "length",
                    "start": 169,
                    "type": "Identifier"
                  },
                  "arg": {
                    "commentStart": 176,
                    "end": 178,
                    "moduleId": 0,
                    "raw": "10",
                    "start": 176,
                    "type": "Literal",
                    "type": "Literal",
                    "value": {
                      "value": 10.0,
                      "suffix": "None"
                    }
                  }
                }
              ],
              "callee": {
                "abs_path": false,
                "commentStart": 161,
                "end": 168,
                "moduleId": 0,
                "name": {
                  "commentStart": 161,
                  "end": 168,
                  "moduleId": 0,
                  "name": "extrude",
                  "start": 161,
                  "type": "Identifier"
                },
                "path": [],
                "start": 161,
                "type": "Name"
              },
              "commentStart": 161,
              "end": 179,
              "moduleId": 0,
              "start": 161,
              "type": "CallExpressionKw",
              "type": "CallExpressionKw",
              "unlabeled": null
            }
          ],
          "commentStart": 12,
          "end": 179,
          "moduleId": 0,
          "start": 12,
          "type": "PipeExpression",
          "type": "PipeExpression"
        },
        "moduleId": 0,
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 179,
      "kind": "const",
      "moduleId": 0,
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "commentStart": 0,
  "end": 180,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
