rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__aa.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 0,
        "end": 11,
        "id": {
          "commentStart": 0,
          "end": 2,
          "moduleId": 0,
          "name": "sg",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "argument": {
            "abs_path": false,
            "commentStart": 6,
            "end": 11,
            "moduleId": 0,
            "name": {
              "commentStart": 6,
              "end": 11,
              "moduleId": 0,
              "name": "scale",
              "start": 6,
              "type": "Identifier"
            },
            "path": [],
            "start": 6,
            "type": "Name",
            "type": "Name"
          },
          "commentStart": 5,
          "end": 11,
          "moduleId": 0,
          "operator": "-",
          "start": 5,
          "type": "UnaryExpression",
          "type": "UnaryExpression"
        },
        "moduleId": 0,
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 11,
      "kind": "const",
      "moduleId": 0,
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "commentStart": 0,
  "end": 11,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
