rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__ad.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 5,
      "declaration": {
        "commentStart": 8,
        "end": 51,
        "id": {
          "commentStart": 8,
          "end": 24,
          "moduleId": 0,
          "name": "firstPrimeNumber",
          "start": 8,
          "type": "Identifier"
        },
        "init": {
          "body": {
            "body": [
              {
                "argument": {
                  "commentStart": 44,
                  "end": 45,
                  "moduleId": 0,
                  "raw": "2",
                  "start": 44,
                  "type": "Literal",
                  "type": "Literal",
                  "value": {
                    "value": 2.0,
                    "suffix": "None"
                  }
                },
                "commentStart": 37,
                "end": 45,
                "moduleId": 0,
                "start": 37,
                "type": "ReturnStatement",
                "type": "ReturnStatement"
              }
            ],
            "commentStart": 27,
            "end": 51,
            "moduleId": 0,
            "start": 27,
            "type": "Program"
          },
          "commentStart": 24,
          "end": 51,
          "moduleId": 0,
          "name": {
            "commentStart": 8,
            "end": 24,
            "moduleId": 0,
            "name": "firstPrimeNumber",
            "start": 8,
            "type": "Identifier"
          },
          "params": [],
          "start": 24,
          "type": "FunctionExpression",
          "type": "FunctionExpression"
        },
        "moduleId": 0,
        "start": 8,
        "type": "VariableDeclarator"
      },
      "end": 51,
      "kind": "fn",
      "moduleId": 0,
      "start": 5,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    },
    {
      "commentStart": 56,
      "end": 74,
      "expression": {
        "arguments": [],
        "callee": {
          "abs_path": false,
          "commentStart": 56,
          "end": 72,
          "moduleId": 0,
          "name": {
            "commentStart": 56,
            "end": 72,
            "moduleId": 0,
            "name": "firstPrimeNumber",
            "start": 56,
            "type": "Identifier"
          },
          "path": [],
          "start": 56,
          "type": "Name"
        },
        "commentStart": 56,
        "end": 74,
        "moduleId": 0,
        "start": 56,
        "type": "CallExpressionKw",
        "type": "CallExpressionKw",
        "unlabeled": null
      },
      "moduleId": 0,
      "start": 56,
      "type": "ExpressionStatement",
      "type": "ExpressionStatement"
    }
  ],
  "commentStart": 0,
  "end": 74,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
