rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__ae.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 3,
        "end": 43,
        "id": {
          "commentStart": 3,
          "end": 8,
          "moduleId": 0,
          "name": "thing",
          "start": 3,
          "type": "Identifier"
        },
        "init": {
          "body": {
            "body": [
              {
                "argument": {
                  "commentStart": 33,
                  "end": 37,
                  "moduleId": 0,
                  "raw": "true",
                  "start": 33,
                  "type": "Literal",
                  "type": "Literal",
                  "value": true
                },
                "commentStart": 26,
                "end": 37,
                "moduleId": 0,
                "start": 26,
                "type": "ReturnStatement",
                "type": "ReturnStatement"
              }
            ],
            "commentStart": 16,
            "end": 43,
            "moduleId": 0,
            "start": 16,
            "type": "Program"
          },
          "commentStart": 8,
          "end": 43,
          "moduleId": 0,
          "name": {
            "commentStart": 3,
            "end": 8,
            "moduleId": 0,
            "name": "thing",
            "start": 3,
            "type": "Identifier"
          },
          "params": [
            {
              "type": "Parameter",
              "identifier": {
                "commentStart": 9,
                "end": 14,
                "moduleId": 0,
                "name": "param",
                "start": 9,
                "type": "Identifier"
              }
            }
          ],
          "start": 8,
          "type": "FunctionExpression",
          "type": "FunctionExpression"
        },
        "moduleId": 0,
        "start": 3,
        "type": "VariableDeclarator"
      },
      "end": 43,
      "kind": "fn",
      "moduleId": 0,
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    },
    {
      "commentStart": 48,
      "end": 60,
      "expression": {
        "arguments": [],
        "callee": {
          "abs_path": false,
          "commentStart": 48,
          "end": 53,
          "moduleId": 0,
          "name": {
            "commentStart": 48,
            "end": 53,
            "moduleId": 0,
            "name": "thing",
            "start": 48,
            "type": "Identifier"
          },
          "path": [],
          "start": 48,
          "type": "Name"
        },
        "commentStart": 48,
        "end": 60,
        "moduleId": 0,
        "start": 48,
        "type": "CallExpressionKw",
        "type": "CallExpressionKw",
        "unlabeled": {
          "commentStart": 54,
          "end": 59,
          "moduleId": 0,
          "raw": "false",
          "start": 54,
          "type": "Literal",
          "type": "Literal",
          "value": false
        }
      },
      "moduleId": 0,
      "start": 48,
      "type": "ExpressionStatement",
      "type": "ExpressionStatement"
    }
  ],
  "commentStart": 0,
  "end": 60,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
